<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_openmap"
    tools:context=".ThirdFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/openmap" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:fontFamily="@font/proxbold"
        android:textColor="@color/intro"
        android:textSize="31sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/descp"
        android:text="@string/description3"
        android:fontFamily="@font/nuniregular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideThreeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|start"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:text="@string/volver"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/slideThreeDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:text="@string/listo"
            android:textSize="20sp"/>
    </LinearLayout>


</LinearLayout>