<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_ayuda"
    tools:context=".AyudaActivity">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="352dp"
        android:layout_height="621dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ayuda" />

    <Button
        android:id="@+id/volverAyudaBtn"
        android:layout_width="152dp"
        android:layout_height="51dp"
        android:background="@drawable/button"
        android:text="VOLVER"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="172dp"
        android:fontFamily="@font/latobold"
        android:text="Te invitamos a usar nuestra app!"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/imageView18" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="314dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/nuniregular"
        android:text="@string/ayuda1"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="318dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/nuniregular"
        android:text="@string/ayuda2"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="317dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/nuniregular"
        android:text="@string/ayuda3"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="245dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/latobold"
        android:gravity="center"
        android:text="@string/ayuda4"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />
</android.support.constraint.ConstraintLayout>